--- a/WinFormApp/WinFormApp.csproj
+++ b/WinFormApp/WinFormApp.csproj
@@ -184,6 +184,12 @@
     <Compile Include="TestsView\ColoredTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="TestsView\UpdateDlg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestsView\UpdateDlg.designer.cs">
+      <DependentUpon>UpdateDlg.cs</DependentUpon>
+    </Compile>
     <Compile Include="TestsView\OutputForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -204,6 +210,7 @@
     <Compile Include="TestsView\TestsPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="TestsView\UpdateExp.cs" />
     <Compile Include="Themes\Themes.cs" />
     <Compile Include="Themes\ThemeExt.cs" />
     <Compile Include="Worker\Analyzer.cs" />
@@ -239,6 +246,9 @@
     </Compile>
     <EmbeddedResource Include="SplashForm.resx">
       <DependentUpon>SplashForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestsView\UpdateDlg.resx">
+      <DependentUpon>UpdateDlg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TestsView\OutputForm.resx">
       <DependentUpon>OutputForm.cs</DependentUpon>
