--- a/WinFormApp/WinFormApp.csproj
+++ b/WinFormApp/WinFormApp.csproj
@@ -190,6 +190,12 @@
     <Compile Include="TestsView\ColoredTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="TestsView\ColoredListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TestsView\TestsTreeView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="TestsView\UpdateDlg.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -209,9 +215,6 @@
     </Compile>
     <Compile Include="TestsView\TestsForm.Designer.cs">
       <DependentUpon>TestsForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TestsView\TestsListView.cs">
-      <SubType>Component</SubType>
     </Compile>
     <Compile Include="TestsView\TestsPanel.cs">
       <SubType>Component</SubType>
@@ -329,7 +332,10 @@
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.3.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\TDD.ico" />
+    <Content Include="Resources\No.png" />
+    <Content Include="Resources\Yes.png" />
+    <Content Include="TestsView\images\No.png" />
+    <Content Include="TestsView\images\Yes.png" />
     <Content Include="TDD.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
